--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
   <div class="login-box">
     <h2>Login</h2>
     <form>
-      <label for="username">Username</label>
-      <input type="text" id="username" placeholder="Masukkan username">
+      <label for="username">Email</label>
+      <input type="text" id="username" placeholder="example@gmail.com">
 
       <label for="password">Password</label>
-      <input type="password" id="password" placeholder="example@gmail.com">
+      <input type="password" id="password" placeholder="masukan password">
       
 
       <button type="submit">Login</button>
